--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,8 @@
     "parserOptions": {
         "ecmaVersion": 12
     },
-    "rules": {}
+    "rules": {
+        "no-underscore-dangle": 0,
+        "func-names": 0
+    }
 }
