--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,9 @@
     },
     "rules": {
         "no-underscore-dangle": 0,
-        "func-names": 0
+        "func-names": 0,
+        "no-restricted-syntax": 0,
+        "no-await-in-loop": 0,
+        "no-shadow": 0
     }
 }
