--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "async": "^3.2.0",
     "debug": "^4.2.0",
+    "get-port": "^5.1.1",
     "radclient": "^1.0.0"
   },
   "devDependencies": {
