--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/arcesino/artillery-engine-radius#readme",
   "dependencies": {
+    "artillery": "^1.6.1",
     "async": "^3.2.0",
     "debug": "^4.2.0",
     "get-port": "^5.1.1",
